    * `file -addmbr`
    * `FUNC` can take func name from tuple pop or string
        * this makes it easier for FUNCs to define FUNCs
    * `gensh` -D -X -prelude and errs on reserved options (DXh)
    * `help` now takes `--` cmdname
    * `interpret -block` now can take a tuple, string, pop
    * `interpreter`
    	* -getout
    	* -setout
    	* -geterr
    	* -seterr
    * `map` creates user tuple maps
    * `objlist -asp`
    * `props` picks up System property ublu.usage.linelength at startup
    * `put` -# now is Long and can take tuple and pop for numberstring
    * `rs`
    	* now takes the closure from either -from or eponymous
    	* -before
    	* -after
    	* -first
    	* -last
    	* -rownum
    	* -rawrs
    * `sess` command missing break after -to
    * `streamf -file`
    * `string -lcase -upcase`
    * `TASK -local`
    * `tuple -assign` to non-existent tuple was failing
    * `usage/help` honors property `ublu.usage.linelength`
    * `WHILE`
    	* was failing on tuple stack ~ argument
    	* didn't unnest completely on `BREAK`
* Examples
    * `ansiesc.ublu` ANSI escape sequences for local terminal color and control
    * `createFileFromRecFormat.ublu`
    * `isJobRunning.ublu`
    * `isSbsActive.ublu`
    * `killme.ublu` starts a thread to exit Ublu, useful for net timeouts
    * `redir.ublu` redirects output from an execution block
    * `writesrc.ublu` writes a local stream file to a source physical file
* Extensions
	* `ux.cmdmap.ublu`
    * `ux.mbrdesc.ublu`
* Stuff
	* Perl
		* `validateuser.pl` validates a userid / password combo
    * jEdit
        * updated `ublu.xml`
* Windowing
    * now executes rest of initial command line
    * set colors separately for input and output from menu
* Testing
    * progress on the framework
    * t.DO
    * t.dpoint
    * t.dq
    * t.dta
    * t.FOR
    * t.FUNC
    * t.IF
    * t.LOCAL
    * t.lifo
    * t.list
    * t.num
    * t.record
    * t.SWITCH
    * t.TRY
    * t.tuple
    * t.WHILE