@@ -34,6 +34,7 @@ All rights reserved.
     	* -setout
     	* -geterr
     	* -seterr
+    * `joblist` modernized
     * `map` creates user tuple maps
     * `objlist -asp`
     * `props` picks up System property ublu.usage.linelength at startup
